--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ add_definitions(-std=c++0x)
 
 set(sources
     src/main.cpp
-    src/learn_constants.cpp src/learn_enums.cpp src/learn_formatting.cpp)
+    src/learn_constants.cpp src/learn_enums.cpp src/learn_formatting.cpp src/learn_file_io.cpp src/learn_standard_in.cpp src/learn_string_stream.cpp)
 
 add_executable(learn ${sources})
 
