Rearranged files with each lesson directories

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,8 @@ cmake_minimum_required (VERSION 3.5)
 add_definitions(-std=c++0x)
 
 set(sources
-    src/main.cpp
-    src/learn_constants.cpp src/learn_enums.cpp src/learn_formatting.cpp src/learn_file_io.cpp src/learn_standard_in.cpp src/learn_string_stream.cpp)
+        src/lesson1/main.cpp
+        src/lesson1/learn_constants.cpp src/lesson1/learn_enums.cpp src/lesson1/learn_formatting.cpp src/lesson1/learn_file_io.cpp src/lesson1/learn_standard_in.cpp src/lesson1/learn_string_stream.cpp)
 
 add_executable(learn ${sources})
 
