--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,12 @@
-project(lesson2)
+project(lesson4)
 
 cmake_minimum_required (VERSION 3.5)
 
 add_definitions(-std=c++0x)
 
 set(sources
-        src/lesson2/main.cpp
-        src/lesson2/header_lesson2.h src/lesson2/learn_arithmetic_operators.cpp src/lesson2/learn_variable_assignments.cpp src/lesson2/learn_prefix_postfix.cpp src/lesson2/learn_variable_assignment_short.cpp)
+        src/lesson4/main.cpp
+        src/lesson4/header_lesson4.h)
 
 add_executable(learn ${sources})
 
