Add Lesson 5 pointers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,12 @@
-project(lesson4)
+project(lesson5)
 
 cmake_minimum_required (VERSION 3.5)
 
 add_definitions(-std=c++0x)
 
 set(sources
-        src/lesson4/main.cpp
-        src/lesson4/header_lesson4.h)
+        src/lesson5/main.cpp
+        src/lesson5/header_lesson5.h src/lesson5/learn_pointers.cpp)
 
 add_executable(learn ${sources})
 
