Add Lesson 6 and 7. Also contains make file(lesson 6) to integrating googletest for c++

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,11 @@
-project(lesson5)
+project(lesson7)
 
 cmake_minimum_required (VERSION 3.5)
 
 add_definitions(-std=c++0x)
 
 set(sources
-        src/lesson5/main.cpp
-        src/lesson5/header_lesson5.h src/lesson5/learn_pointers.cpp)
+        src/lesson7/main.cpp
+        src/lesson7/learn_functions.cpp src/lesson7/header_lesson7.h src/lesson7/learn_arrays.cpp)
 
 add_executable(learn ${sources})
-
